--- a/project/CG2-00-01.vcxproj
+++ b/project/CG2-00-01.vcxproj
@@ -63,7 +63,7 @@
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)Engine\2d\Sprite;$(ProjectDir)Engine\2d\SpriteBase;$(ProjectDir)Engine\3d\Camera;$(ProjectDir)Engine\3d\Model\Model;$(ProjectDir)Engine\3d\Model\ModelBase;$(ProjectDir)Engine\3d\Object\Object3d;$(ProjectDir)Engine\3d\Object\Object3dBase;$(ProjectDir)Engine\3d\Object\WireFrame;$(ProjectDir)Engine\BlackBox\LeakChecker;$(ProjectDir)Engine\Audio;$(ProjectDir)Engine\BlackBox\Log;$(ProjectDir)Engine\Core\BaseEngine;$(ProjectDir)Engine\Core\Input;$(ProjectDir)Engine\Core\WinApp;$(ProjectDir)Engine\LoadManager\ModelManager;$(ProjectDir)Engine\LoadManager\TextureManager;$(ProjectDir)Engine\Math;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Application;$(ProjectDir);$(ProjectDir)Engine\2d\Sprite;$(ProjectDir)Engine\2d\SpriteBase;$(ProjectDir)Engine\3d\Camera;$(ProjectDir)Engine\3d\Model\Model;$(ProjectDir)Engine\3d\Model\ModelBase;$(ProjectDir)Engine\3d\Object\Object3d;$(ProjectDir)Engine\3d\Object\Object3dBase;$(ProjectDir)Engine\3d\Object\WireFrame;$(ProjectDir)Engine\BlackBox\LeakChecker;$(ProjectDir)Engine\Audio;$(ProjectDir)Engine\BlackBox\Log;$(ProjectDir)Engine\Core\BaseEngine;$(ProjectDir)Engine\Core\Input;$(ProjectDir)Engine\Core\WinApp;$(ProjectDir)Engine\LoadManager\ModelManager;$(ProjectDir)Engine\LoadManager\TextureManager;$(ProjectDir)Engine\Math;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -87,7 +87,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)Engine\2d\Sprite;$(ProjectDir)Engine\2d\SpriteBase;$(ProjectDir)Engine\3d\Camera;$(ProjectDir)Engine\3d\Model\Model;$(ProjectDir)Engine\3d\Model\ModelBase;$(ProjectDir)Engine\3d\Object\Object3d;$(ProjectDir)Engine\3d\Object\Object3dBase;$(ProjectDir)Engine\BlackBox\LeakChecker;$(ProjectDir)Engine\Audio;$(ProjectDir)Engine\BlackBox\Log;$(ProjectDir)Engine\Core\BaseEngine;$(ProjectDir)Engine\Core\Input;$(ProjectDir)Engine\Core\WinApp;$(ProjectDir)Engine\LoadManager\ModelManager;$(ProjectDir)Engine\LoadManager\TextureManager;$(ProjectDir)Engine\Math;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Application;$(ProjectDir);$(ProjectDir)Engine\2d\Sprite;$(ProjectDir)Engine\2d\SpriteBase;$(ProjectDir)Engine\3d\Camera;$(ProjectDir)Engine\3d\Model\Model;$(ProjectDir)Engine\3d\Model\ModelBase;$(ProjectDir)Engine\3d\Object\Object3d;$(ProjectDir)Engine\3d\Object\Object3dBase;$(ProjectDir)Engine\BlackBox\LeakChecker;$(ProjectDir)Engine\Audio;$(ProjectDir)Engine\BlackBox\Log;$(ProjectDir)Engine\Core\BaseEngine;$(ProjectDir)Engine\Core\Input;$(ProjectDir)Engine\Core\WinApp;$(ProjectDir)Engine\LoadManager\ModelManager;$(ProjectDir)Engine\LoadManager\TextureManager;$(ProjectDir)Engine\Math;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -131,6 +131,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Engine\Core\WinApp\WinApp.cpp" />
     <ClCompile Include="Application\FrameWork.cpp" />
     <ClCompile Include="Engine\3d\Object\WireFrame\WireFrameObjectBase.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\DebugMode.h" />
@@ -167,6 +168,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\Core\WinApp\WinApp.h" />
     <ClInclude Include="Application\FrameWork.h" />
     <ClInclude Include="Engine\3d\Object\WireFrame\WireFrameObjectBase.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="externels\imgui\LICENSE.txt" />
