--- a/project/CG2-00-01.vcxproj.filters
+++ b/project/CG2-00-01.vcxproj.filters
@@ -52,15 +52,6 @@
     <Filter Include="Engine\3d\Model">
       <UniqueIdentifier>{c92182b0-2a45-48d3-b2b1-31e35cb8e71c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\Manager">
-      <UniqueIdentifier>{987fb7d4-7b12-417c-a6f4-d8e7a1bb2f13}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\Manager\ModelManager">
-      <UniqueIdentifier>{a62843ef-edb9-490e-8396-ba9309229e61}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\Manager\TextureManager">
-      <UniqueIdentifier>{8837f59e-c0a2-4eb3-83f7-97c03d1a996a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Engine\Input">
       <UniqueIdentifier>{a5d9a3b3-8c80-475b-aaa4-1060bc813083}</UniqueIdentifier>
     </Filter>
@@ -78,6 +69,15 @@
     </Filter>
     <Filter Include="Engine\3d\Camera">
       <UniqueIdentifier>{8280debf-7b2d-4f7b-8ad4-95d8d2007b74}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Manager">
+      <UniqueIdentifier>{987fb7d4-7b12-417c-a6f4-d8e7a1bb2f13}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Manager\ModelManager">
+      <UniqueIdentifier>{a62843ef-edb9-490e-8396-ba9309229e61}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Manager\TextureManager">
+      <UniqueIdentifier>{8837f59e-c0a2-4eb3-83f7-97c03d1a996a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -124,7 +124,7 @@
       <Filter>Engine\BlackBox\LeakChecker</Filter>
     </ClCompile>
     <ClCompile Include="Engine\LoadManager\TextureManager\TextureManager.cpp">
-      <Filter>Engine\Manager\TextureManager</Filter>
+      <Filter>ヘッダー ファイル\Manager\TextureManager</Filter>
     </ClCompile>
     <ClCompile Include="Engine\3d\Object\Object3dBase\Object3dBase.cpp">
       <Filter>Engine\3d\Object3d</Filter>
@@ -151,7 +151,7 @@
       <Filter>Engine\2d\Sprite\Sprite</Filter>
     </ClCompile>
     <ClCompile Include="Engine\LoadManager\ModelManager\ModelManager.cpp">
-      <Filter>Engine\Manager\ModelManager</Filter>
+      <Filter>ヘッダー ファイル\Manager\ModelManager</Filter>
     </ClCompile>
     <ClCompile Include="Engine\2d\SpriteBase\SpriteBase.cpp">
       <Filter>Engine\2d\Sprite\SpriteBase</Filter>
@@ -167,6 +167,9 @@
     </ClCompile>
     <ClCompile Include="Engine\3d\Object\WireFrame\WireFrameObjectBase.cpp">
       <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Application</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -231,7 +234,7 @@
       <Filter>Engine\BlackBox\LeakChecker</Filter>
     </ClInclude>
     <ClInclude Include="Engine\LoadManager\TextureManager\TextureManager.h">
-      <Filter>Engine\Manager\TextureManager</Filter>
+      <Filter>ヘッダー ファイル\Manager\TextureManager</Filter>
     </ClInclude>
     <ClInclude Include="Engine\3d\Object\Object3d\Object3d.h">
       <Filter>Engine\3d\Object3d</Filter>
@@ -255,7 +258,7 @@
       <Filter>Engine\2d\Sprite\Sprite</Filter>
     </ClInclude>
     <ClInclude Include="Engine\LoadManager\ModelManager\ModelManager.h">
-      <Filter>Engine\Manager\ModelManager</Filter>
+      <Filter>ヘッダー ファイル\Manager\ModelManager</Filter>
     </ClInclude>
     <ClInclude Include="Engine\2d\SpriteBase\SpriteBase.h">
       <Filter>Engine\2d\Sprite\SpriteBase</Filter>
@@ -271,6 +274,9 @@
     </ClInclude>
     <ClInclude Include="Engine\3d\Object\WireFrame\WireFrameObjectBase.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Application</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
