--- a/project/CG2-00-01.vcxproj.filters
+++ b/project/CG2-00-01.vcxproj.filters
@@ -168,10 +168,7 @@
     <ClCompile Include="Engine\3d\Object\WireFrame\WireFrameObjectBase.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="SwitchLight.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="SWLight.cpp">
+    <ClCompile Include="Application\switchLight.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -278,10 +275,7 @@
     <ClInclude Include="Engine\3d\Object\WireFrame\WireFrameObjectBase.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="SwitchLight.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="SWLight.h">
+    <ClInclude Include="Application\switchLight.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
