--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -38,6 +38,18 @@ Pos=1080,0
 Size=200,300
 Collapsed=0
 
+[Window][ModelAABB]
+Pos=60,60
+Size=103,238
+Collapsed=0
 
+[Window][Debug Window]
+Pos=60,60
+Size=116,54
+Collapsed=0
+
+[Window][Goal Window]
+Pos=60,60
+Size=131,77
 Collapsed=0
 
