--- a/project/CG2-00-01.vcxproj.filters
+++ b/project/CG2-00-01.vcxproj.filters
@@ -39,8 +39,8 @@
     <ClCompile Include="Application\FrameWork.cpp" />
     <ClCompile Include="Engine\3d\Object\WireFrame\WireFrameObjectBase.cpp" />
     <ClCompile Include="Goal.cpp" />
-    <ClCompile Include="starResult.cpp" />
-    <ClCompile Include="Star.cpp" />
+    <ClCompile Include="Application\starResult.cpp" />
+    <ClCompile Include="Application\Star.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\DebugMode.h" />
@@ -80,8 +80,8 @@
     <ClInclude Include="Application\FrameWork.h" />
     <ClInclude Include="Engine\3d\Object\WireFrame\WireFrameObjectBase.h" />
     <ClInclude Include="Goal.h" />
-    <ClInclude Include="starResult.h" />
-    <ClInclude Include="Star.h" />
+    <ClInclude Include="Application\starResult.h" />
+    <ClInclude Include="Application\Star.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\Object3d.hlsli" />
