--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -19,7 +19,7 @@ Size=234,300
 Collapsed=0
 
 [Window][colorConfig]
-Pos=986,322
+Pos=982,329
 Size=300,400
 Collapsed=0
 
@@ -38,6 +38,8 @@ Pos=1080,0
 Size=200,300
 Collapsed=0
 
-
+[Window][ModelAABB]
+Pos=60,60
+Size=103,261
 Collapsed=0
 
