--- a/project/CG2-00-01.vcxproj.filters
+++ b/project/CG2-00-01.vcxproj.filters
@@ -39,7 +39,8 @@
     <ClCompile Include="Application\FrameWork.cpp" />
     <ClCompile Include="Engine\3d\Object\WireFrame\WireFrameObjectBase.cpp" />
     <ClCompile Include="Goal.cpp" />
-
+    <ClCompile Include="Application\Star.cpp" />
+    <ClCompile Include="Application\starResult.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\DebugMode.h" />
@@ -80,6 +81,8 @@
     <ClInclude Include="Engine\3d\Object\WireFrame\WireFrameObjectBase.h" />
     <ClInclude Include="Goal.h" />
     <ClInclude Include="Engine\Math\Quaternion.h" />
+    <ClInclude Include="Application\Star.h" />
+    <ClInclude Include="Application\starResult.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\Object3d.hlsli" />
@@ -87,6 +90,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="externels\imgui\LICENSE.txt" />
-
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="externels\assimp\lib\Release\assimp-vc143-mtd.lib" />
   </ItemGroup>
 </Project>
