--- a/project/CG2-00-01.vcxproj
+++ b/project/CG2-00-01.vcxproj
@@ -63,7 +63,7 @@
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir)externels\assimp\include;$(ProjectDir)\Engine\LoadManager\TextureManager;$(ProjectDir)\Engine\LoadManager\ModelManager;$(ProjectDir)\Engine\Core\WinApp;$(ProjectDir)\Engine\Core\Input;$(ProjectDir)\Engine\Core\BaseEngine;$(ProjectDir)\Engine\Collision;$(ProjectDir)\Engine\BlackBox\Log;$(ProjectDir)\Engine\BlackBox\LeakChecker;$(ProjectDir)\Engine\Audio;$(ProjectDir)\Engine\2d\SpriteBase;$(ProjectDir)\Engine\2d\Sprite;$(ProjectDir)\Engine\Math;$(ProjectDir)\Engine\3d\Object\WireFrame;$(ProjectDir)\Engine\3d\Object\Object3dBase;$(ProjectDir)\Engine\3d\Object\Object3d;$(ProjectDir)\Engine\3d\Model\ModelBase;$(ProjectDir)\Engine\3d\Model\Model;$(ProjectDir)\Engine\3d\Camera;$(ProjectDir)\Application;$(ProjectDir);</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\Engine\3dCollision\CollisionObject;$(ProjectDir)\Engine\3dCollision\CollisionModel;$(ProjectDir)externels\assimp\include;$(ProjectDir)\Engine\LoadManager\CollisionModelManager;$(ProjectDir)\Engine\LoadManager\TextureManager;$(ProjectDir)\Engine\LoadManager\ModelManager;$(ProjectDir)\Engine\Core\WinApp;$(ProjectDir)\Engine\Core\Input;$(ProjectDir)\Engine\Core\BaseEngine;$(ProjectDir)\Engine\Collision;$(ProjectDir)\Engine\BlackBox\Log;$(ProjectDir)\Engine\BlackBox\LeakChecker;$(ProjectDir)\Engine\Audio;$(ProjectDir)\Engine\2d\SpriteBase;$(ProjectDir)\Engine\2d\Sprite;$(ProjectDir)\Engine\Math;$(ProjectDir)\Engine\3d\Object\WireFrame;$(ProjectDir)\Engine\3d\Object\Object3dBase;$(ProjectDir)\Engine\3d\Object\Object3d;$(ProjectDir)\Engine\3d\Model\ModelBase;$(ProjectDir)\Engine\3d\Model\Model;$(ProjectDir)\Engine\3d\Camera;$(ProjectDir)\Application;$(ProjectDir);</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -89,7 +89,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir)externels\assimp\include;$(ProjectDir)\Engine\LoadManager\TextureManager;$(ProjectDir)\Engine\LoadManager\ModelManager;$(ProjectDir)\Engine\Core\WinApp;$(ProjectDir)\Engine\Core\Input;$(ProjectDir)\Engine\Core\BaseEngine;$(ProjectDir)\Engine\Collision;$(ProjectDir)\Engine\BlackBox\Log;$(ProjectDir)\Engine\BlackBox\LeakChecker;$(ProjectDir)\Engine\Audio;$(ProjectDir)\Engine\2d\SpriteBase;$(ProjectDir)\Engine\2d\Sprite;$(ProjectDir)\Engine\Math;$(ProjectDir)\Engine\3d\Object\WireFrame;$(ProjectDir)\Engine\3d\Object\Object3dBase;$(ProjectDir)\Engine\3d\Object\Object3d;$(ProjectDir)\Engine\3d\Model\ModelBase;$(ProjectDir)\Engine\3d\Model\Model;$(ProjectDir)\Engine\3d\Camera;$(ProjectDir)\Application;$(ProjectDir);$(ProjectDir);$(ProjectDir)Engine\Collision;$(ProjectDir)externels\assimp\include;$(ProjectDir)Engine\2d\Sprite;$(ProjectDir)Engine\2d\SpriteBase;$(ProjectDir)Engine\3d\Camera;$(ProjectDir)Engine\3d\Model\Model;$(ProjectDir)Engine\3d\Model\ModelBase;$(ProjectDir)Engine\3d\Object\Object3d;$(ProjectDir)Engine\3d\Object\WireFrame;$(ProjectDir)Engine\3d\Object\Object3dBase;$(ProjectDir)Engine\BlackBox\LeakChecker;$(ProjectDir)Engine\Audio;$(ProjectDir)Engine\BlackBox\Log;$(ProjectDir)Engine\Core\BaseEngine;$(ProjectDir)Engine\Core\Input;$(ProjectDir)Engine\Core\WinApp;$(ProjectDir)Engine\LoadManager\ModelManager;$(ProjectDir)Engine\LoadManager\TextureManager;$(ProjectDir)Engine\Math;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\Engine\3dCollision\CollisionObject;$(ProjectDir)\Engine\3dCollision\CollisionModel;$(ProjectDir)externels\assimp\include;$(ProjectDir)\Engine\LoadManager\CollisionModelManager;$(ProjectDir)\Engine\LoadManager\TextureManager;$(ProjectDir)\Engine\LoadManager\ModelManager;$(ProjectDir)\Engine\Core\WinApp;$(ProjectDir)\Engine\Core\Input;$(ProjectDir)\Engine\Core\BaseEngine;$(ProjectDir)\Engine\Collision;$(ProjectDir)\Engine\BlackBox\Log;$(ProjectDir)\Engine\BlackBox\LeakChecker;$(ProjectDir)\Engine\Audio;$(ProjectDir)\Engine\2d\SpriteBase;$(ProjectDir)\Engine\2d\Sprite;$(ProjectDir)\Engine\Math;$(ProjectDir)\Engine\3d\Object\WireFrame;$(ProjectDir)\Engine\3d\Object\Object3dBase;$(ProjectDir)\Engine\3d\Object\Object3d;$(ProjectDir)\Engine\3d\Model\ModelBase;$(ProjectDir)\Engine\3d\Model\Model;$(ProjectDir)\Engine\3d\Camera;$(ProjectDir)\Application;$(ProjectDir);$(ProjectDir);$(ProjectDir)Engine\Collision;$(ProjectDir)externels\assimp\include;$(ProjectDir)Engine\2d\Sprite;$(ProjectDir)Engine\2d\SpriteBase;$(ProjectDir)Engine\3d\Camera;$(ProjectDir)Engine\3d\Model\Model;$(ProjectDir)Engine\3d\Model\ModelBase;$(ProjectDir)Engine\3d\Object\Object3d;$(ProjectDir)Engine\3d\Object\WireFrame;$(ProjectDir)Engine\3d\Object\Object3dBase;$(ProjectDir)Engine\BlackBox\LeakChecker;$(ProjectDir)Engine\Audio;$(ProjectDir)Engine\BlackBox\Log;$(ProjectDir)Engine\Core\BaseEngine;$(ProjectDir)Engine\Core\Input;$(ProjectDir)Engine\Core\WinApp;$(ProjectDir)Engine\LoadManager\ModelManager;$(ProjectDir)Engine\LoadManager\TextureManager;$(ProjectDir)Engine\Math;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -109,6 +109,9 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Application\DebugMode.cpp" />
     <ClCompile Include="Application\LightBlock.cpp" />
     <ClCompile Include="Application\switchLight.cpp" />
+    <ClCompile Include="Engine\LoadManager\CollisionModelManager\CollisionModelManager.cpp" />
+    <ClCompile Include="Engine\3dCollision\CollisionObject\CollisionObject3d.cpp" />
+    <ClCompile Include="Engine\3dCollision\CollisionModel\CollisionModel.cpp" />
     <ClCompile Include="Engine\Audio\Audio.cpp" />
     <ClCompile Include="Engine\2d\SpriteBase\SpriteBase.cpp" />
     <ClCompile Include="Engine\3d\Camera\Camera.cpp" />
@@ -145,6 +148,9 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Application\DebugMode.h" />
     <ClInclude Include="Application\LightBlock.h" />
     <ClInclude Include="Application\switchLight.h" />
+    <ClInclude Include="Engine\LoadManager\CollisionModelManager\CollisionModelManager.h" />
+    <ClInclude Include="Engine\3dCollision\CollisionObject\CollisionObject3d.h" />
+    <ClInclude Include="Engine\3dCollision\CollisionModel\CollisionModel.h" />
     <ClInclude Include="Engine\Audio\Audio.h" />
     <ClInclude Include="Engine\2d\SpriteBase\SpriteBase.h" />
     <ClInclude Include="Engine\3d\Camera\Camera.h" />
