--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -53,3 +53,18 @@ Pos=60,60
 Size=326,191
 Collapsed=0
 
+[Window][collisionDistance]
+Pos=60,60
+Size=61,77
+Collapsed=0
+
+[Window][Goal Window]
+Pos=60,60
+Size=131,77
+Collapsed=0
+
+[Window][Star Debug]
+Pos=60,60
+Size=131,215
+Collapsed=0
+
