クラス名変更

--- a/project/CG2-00-01.vcxproj.filters
+++ b/project/CG2-00-01.vcxproj.filters
@@ -46,7 +46,7 @@
     <ClCompile Include="Application\Scene\MyGame.cpp" />
     <ClCompile Include="Engine\Lighting\Light.cpp" />
     <ClCompile Include="Application\Goal.cpp" />
-    <ClCompile Include="Engine\UI\Button.cpp" />
+    <ClCompile Include="Engine\UI\UI.cpp" />
     <ClCompile Include="Application\Scene\Title.cpp" />
     <ClCompile Include="Application\Scene\GameClear.cpp" />
     <ClCompile Include="Application\Scene\Rule.cpp" />
@@ -97,7 +97,7 @@
     <ClInclude Include="Application\Scene\MyGame.h" />
     <ClInclude Include="Engine\Lighting\Light.h" />
     <ClInclude Include="Application\Goal.h" />
-    <ClInclude Include="Engine\UI\Button.h" />
+    <ClInclude Include="Engine\UI\UI.h" />
     <ClInclude Include="Application\Scene\Title.h" />
     <ClInclude Include="Application\Scene\GameClear.h" />
     <ClInclude Include="Application\Scene\Rule.h" />
