完成_UI点滅まで

--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -49,9 +49,9 @@ Size=88,100
 Collapsed=0
 
 [Window][State]
-Pos=51,157
+Pos=36,24
 Size=408,179
-Collapsed=0
+Collapsed=1
 
 [Window][collisionDistance]
 Pos=50,42
@@ -74,7 +74,17 @@ Size=142,48
 Collapsed=0
 
 [Window][Button]
-Pos=60,60
+Pos=37,54
 Size=252,56
+Collapsed=1
+
+[Window][Len]
+Pos=60,60
+Size=46,77
+Collapsed=0
+
+[Window][SwitchDist]
+Pos=60,60
+Size=68,54
 Collapsed=0
 
